[FIX] Se arregló el header con z-index

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ header{
     top: 0;
     height: 6.25rem;
     border-bottom: solid 3px lightgray;
+    z-index: 10000;
 }
 
 .logo{
